--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="title">
         <div class="back"></div>
-        <img src="logonami14のコピー.jpg" alt="">
+        <img src="logonami14.jpg" alt="">
       </div>
       <div class="menu">
         <button class="btn-menu">メニュー</button>
@@ -21,9 +21,9 @@
           <ul>
             <li><a href="お店facebook">お知らせ</a></li>
             <li><a href="tel:080-1390-1277">お問い合わせ</a></li>
-            <li><a href="波之屋メニュー.pdf">メニュー</a></li>
-            <li> <a href="#">波之屋嘉手納店</a> </li>
-            <li><a href="https://www.google.com/maps/place/%E7%84%BC%E8%82%89%E6%B3%A2%E4%B9%8B%E5%B1%8B/@26.3630894,127.7504693,17z/data=!3m1!4b1!4m5!3m4!1s0x34e513cd2a4a2933:0x2abf2a82d222896f!8m2!3d26.3630894!4d127.7504693">location</a></li>
+            <li><a href="naminoya_menu.pdf">メニュー</a></li>
+            <li> <a href="https://ksn-design.github.io/-./">波之屋嘉手納店</a> </li>
+            <li><a href="https://www.google.co.jp/maps/place/%E3%80%92905-0013+%E6%B2%96%E7%B8%84%E7%9C%8C%E5%90%8D%E8%AD%B7%E5%B8%82%E5%9F%8E%EF%BC%91%E4%B8%81%E7%9B%AE%EF%BC%91%E2%88%92%EF%BC%92%EF%BC%98/@26.5912471,127.981926,17z/data=!3m1!4b1!4m5!3m4!1s0x34e4558bd982508b:0x52feab807d74e522!8m2!3d26.5912471!4d127.981926?hl=ja">location</a></li>
             <li><a href="#">採用情報</a></li>
             <li><a href="https://ksn-design.github.io/-/">お店概要</a></li>
             <li> <a href="#">PC版</a> </li>
@@ -35,10 +35,10 @@
   </div>
 
   <div class="main-wrapper">
-    <img src="NaminoYaのコピー.jpg" alt="">
+    <img src="NaminoYa.jpg" alt="">
     <div class="container">
       <div class="main-title">
-        <h2>波之屋嘉手納店</h2>
+        <h2>波之屋名護店</h2>
       </div>
     </div>
   </div>
@@ -55,16 +55,16 @@
     <div class="information-wrapper">
       <div class="container">
         <div class="information-title">
-          <h2>波之屋嘉手納店</h2>
+          <h2>波之屋ナゴ城店</h2>
         </div>
         <div class="information-detail">
           <ul>
             <li>
               <dl class="information-details">
                 <dt>住所</dt>
-                <dd>〒904-0203 沖縄県中頭郡嘉手納町字嘉手納町字嘉手納４２９</dd>
+                <dd>沖縄県名護城1-1-28</dd>
                 <dt>アクセス</dt>
-                <dd>嘉手納公園付近 <br> お近くの有料駐車場にお車を停めてお越しください　</dd>
+                <dd>大西トンネル付近 <br> ＊提携の駐車場がございませんので、Family Martの向かい（志学塾横）の有料駐車場にお車を停めてお越しください。　</dd>
                 <dt>TEL</dt>
                 <dd> <a href="TEL:080-1390-1277">080-1390-1277</a> </dd>
                 <dt>営業時間</dt>
@@ -77,12 +77,12 @@
     </div>
   </div>
   <div class="googleMap">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3574.8691409437474!2d127.74828061501!3d26.363094189880332!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513cd2a4a2933%3A0x2abf2a82d222896f!2z54S86IKJ5rOi5LmL5bGL!5e0!3m2!1sja!2sjp!4v1599045178784!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3567.785828383428!2d127.981926!3d26.591247100000018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e4558bd982508b%3A0x52feab807d74e522!2z44CSOTA1LTAwMTMg5rKW57iE55yM5ZCN6K235biC5Z-O77yR5LiB55uu77yR4oiS77yS77yY!5e0!3m2!1sja!2sjp!4v1597494559831!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
   <div class="overView-wrapper">
     <div class="imageIn">
       <div class="container">
-        <img src="meat2のコピー.jpg" alt="">
+        <img src="meat2.jpg" alt="">
         <p>沖縄で味わう、厳選された食材のおもてなしをする
   波之屋沖縄名護店が名護大通りにございます。
   「肥肉厚酒なおもてなし」をコンセプトに、厳選された食材の中から常に吟味をくりかえした「旨み」をご提供しております。沖縄城焼き肉店ならではの居心地と味を、どうぞご堪能くださいませ。</p>
@@ -90,19 +90,19 @@
     </div>
     <div class="imageOut">
       <div class="container">
-        <img src="meat1のコピー.jpg" alt="">
+        <img src="meat1.jpg" alt="">
       </div>
     </div>
   </div>
   <div class="Menu-wrapper">
     <div class="container">
       <div class="nlogo">
-        <img src="nlogo1のコピー.jpg" alt="">
+        <img src="nlogo1.jpg" alt="">
       </div>
       <div class="Menu-exp">
         <p>厳選された食材と当店自慢のドリンクシステムを心ゆくまでご堪能ください</p>
       </div>
-      <button type="button" name="button"> <a href="波之屋メニュー.pdf">メニューを見る</a> </button>
+      <button type="button" name="button"> <a href="naminoya_menu.pdf">メニューを見る</a> </button>
     </div>
   </div>
   <div class="footer">
