--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="title">
         <div class="back"></div>
-        <img src="logonami14のコピー.jpg" alt="">
+        <img src="logonami14copy.jpg" alt="">
       </div>
       <div class="menu">
         <button class="btn-menu">メニュー</button>
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="お店facebook">お知らせ</a></li>
             <li><a href="tel:080-1390-1277">お問い合わせ</a></li>
-            <li><a href="波之屋メニュー.pdf">メニュー</a></li>
+            <li><a href="nnn.pdf">メニュー</a></li>
             <li> <a href="https://ksn-design.github.io/Naminoya/">波之屋名護店</a> </li>
             <li><a href="https://www.google.com/maps/place/%E7%84%BC%E8%82%89%E6%B3%A2%E4%B9%8B%E5%B1%8B/@26.3630894,127.7504693,17z/data=!3m1!4b1!4m5!3m4!1s0x34e513cd2a4a2933:0x2abf2a82d222896f!8m2!3d26.3630894!4d127.7504693">location</a></li>
             <li><a href="#">採用情報</a></li>
@@ -35,7 +35,7 @@
   </div>
 
   <div class="main-wrapper">
-    <img src="NaminoYaのコピー.jpg" alt="">
+    <img src="NaminoYacopy.jpg" alt="">
     <div class="container">
       <div class="main-title">
         <h2>波之屋嘉手納店</h2>
@@ -82,7 +82,7 @@
   <div class="overView-wrapper">
     <div class="imageIn">
       <div class="container">
-        <img src="meat2のコピー.jpg" alt="">
+        <img src="meat2copy.jpg" alt="">
         <p>沖縄で味わう、厳選された食材のおもてなしをする
   波之屋沖縄名護店が名護大通りにございます。
   「肥肉厚酒なおもてなし」をコンセプトに、厳選された食材の中から常に吟味をくりかえした「旨み」をご提供しております。沖縄城焼き肉店ならではの居心地と味を、どうぞご堪能くださいませ。</p>
@@ -90,19 +90,19 @@
     </div>
     <div class="imageOut">
       <div class="container">
-        <img src="meat1のコピー.jpg" alt="">
+        <img src="meat1copy.jpg" alt="">
       </div>
     </div>
   </div>
   <div class="Menu-wrapper">
     <div class="container">
       <div class="nlogo">
-        <img src="nlogo1のコピー.jpg" alt="">
+        <img src="nlogo1copy.jpg" alt="">
       </div>
       <div class="Menu-exp">
         <p>厳選された食材と当店自慢のドリンクシステムを心ゆくまでご堪能ください</p>
       </div>
-      <button type="button" name="button"> <a href="naminoya_menuのコピー.pdf">メニューを見る</a> </button>
+      <button type="button" name="button"> <a href="nnn.pdf">メニューを見る</a> </button>
     </div>
   </div>
   <div class="footer">
