--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="overView-wrapper">
     <div class="imageIn">
       <div class="container">
-        <img src="meat2copy.jpg" alt="">
+        <img src="kadena.jpg" alt="">
         <p>沖縄で味わう、厳選された食材のおもてなしをする
   波之屋沖縄名護店が名護大通りにございます。
   「肥肉厚酒なおもてなし」をコンセプトに、厳選された食材の中から常に吟味をくりかえした「旨み」をご提供しております。沖縄城焼き肉店ならではの居心地と味を、どうぞご堪能くださいませ。</p>
